# leti_labs

./: README.md
1 SEMESTR/Kursovik/: input1.txt  kursovik.cpp  pamyat.txt
1 SEMESTR/lab2/: konez.txt  lab2.2.2.cpp  lab2_1.2.cpp  test.cpp
1 SEMESTR/lab3/: lab3.2.cpp
1 SEMESTR/lab4/: lab4.211.cpp  result_dynamic.txt  testd11.txt  testd6.txt  tests3.txt  tests6.txt  tests8.txt
1 SEMESTR/lab5/: input.txt  input1.txt  input7.txt  input9.txt  output10.txt  output2.txt  output5.txt  output8.txt  output9.txt
2 KURS /2 SEM/AiSD/lab1/: CMakeLists.txt  MEGA_compressors.cpp  MEGA_compressors.h  huffman.cpp  huffman.h  main.cpp  rle.cpp  rle.h  test.cpp  test.py  test_entropy.cpp  test_entropy.h  test_entropy2.cpp
2 KURS /2 SEM/AiSD/lab1/compressors/: bwt.cpp  bwt.h  huffman.cpp  huffman.h  lz77.cpp  lz77.h  lz78.cpp  lz78.h  mtf.cpp  mtf.h  rle.cpp  rle.h
2 KURS /2 SEM/AiSD/lab1/data/: README.md  voina_i_mir.txt
2 KURS /2 SEM/AiSD/lab1/serialization/: serialization.h
2 SEMESTR/Kursovikk/: Birga.cpp  Birga.h  CMakeLists.txt  Employer.h  F_dogovor.h  (+29 more)
3 KURS/: dump2full.sql  lab1.py  lab2.py  lab3.py  lab4.py  lab5.py  lab6.py
Kursovik/: input.txt  input1.txt  kursovik.cpp  wtf.cpp
OTCHET/: Отчёт по проге 4.docx  Отчёт по проге 5.1.odt
jj 1 lab/: in11.txt  in12.txt  in13.txt  in14.txt  in2.txt  in4.txt  lab_1_1.cpp
lab2/: lab2 10.10.txt  lab2_1.cpp
lab3/: proga_3otchet_masha_kalujnaya1.doc
lab4/: static_array2.txt  testd10.txt  testd2.txt  testd3.txt  testd4.txt  testd5.txt  testd7.txt  tests4.txt  tests9.txt
lab5/: input10.txt  input4.txt  output4.txt
(+390 files in other folders)
